2_RessourcesIstio/2.3_Resilience/2.3.1_ClientLoadBalancing/simple-backend-dr-least-request.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: simple-backend-dr
spec:
  host: simple-backend.istioinaction.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
